# api-legacy

./: .env.example  .gitignore  Cargo.toml  README  README.md  ]  config.toml  notes.md  requests.txt
keys/: generate.sh
migrations/: 100_create_citext_extension.sql  105_create_gender_enum.sql  106_create_account_state_enum.sql  107_create_themes_enum.sql  108_create_language_enum.sql  109_create_meal_product_kind_enum.sql  109_create_meal_product_type_enum.sql  110_create_measurement_system_enum.sql  110_create_weight_unit_enum.sql  111_create_weight_goal_enum.sql  112_create_user_origin_enum.sql  113_create_user_diet_enum.sql  114_create_height_unit_enum.sql  115_create_gender_enum.sql  119_create_products_table.sql  120_create_users_table.sql  121_create_user_details_table.sql  121_create_users_deletion_history.sql  122_create_user_preferences_table.sql  123_create_user_meal_sections_table.sql  124_create_user_meals_table.sql  125_create_meal_products_table.sql  126_create_meal_items_table.sql  127_create_user_goals_table.sql  128_create_user_metrics_table.sql  129_create_user_nutrients_table.sql  130_add_quantity_and_unit_to_products.sql  200_create_unit_enum.sql  201_create_user_enums.sql  202_create_meal_product_kind_enum.sql  300_create_products_table.sql  300_create_user_tables.sql  301_create_products_table.sql  301_create_user_tables.sql  302_create_meal_products_table.sql  302_create_section_tables.sql  303_create_meal_tables.sql  304_create_fridge_products_table.sql
src/: cache.rs  config.rs  main.rs
src/database/: meal.rs  meal_section.rs  mod.rs  product.rs  section.rs  user.rs  user_fridge_products.rs  user_nutrients.rs
src/models/: database.rs  dto.rs  errors.rs  mod.rs
src/models/database/: enums.rs  fridge.rs  meal.rs  meal_section.rs  mod.rs  product.rs  section.rs  user.rs
src/models/dto/: auth.rs  fridge.rs  meals.rs  mod.rs  nutrients.rs  products.rs  sections.rs  users.rs
src/routes/: auth.rs  fridge.rs  meals.rs  mod.rs  nutrients.rs  products.rs  sections.rs  users.rs
src/security/: jwt.rs  middlewares.rs  mod.rs
src/services/: auth.rs  fridge.rs  meals.rs  mod.rs  nutrients.rs  products.rs  sections.rs  users.rs
src/utils/: auth_middleware.rs  conversion.rs  extractors.rs  jwt.rs  jwt_middleware.rs  logger.rs  mod.rs  nutrition.rs  password.rs  validation.rs
