[package]
name = "kenko-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", features = ["tracing", "multipart"] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
thiserror = "2.0"
