[package]
name = "kenko-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", features = ["tracing", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

jsonwebtoken = "9.3"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
regex = "1.11"

strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
thiserror = "2.0"
