[package]
name = "kenko-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", features = ["tracing", "multipart"] }
tower-http = { version = "0.6", default-features = false, features = ["cors", "fs", "limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "bigdecimal"] }
redis = { version = "0.32", features = ["tokio-comp"] }
jsonwebtoken = "9.3"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
regex = "1.11"
strum = "0.27"
strum_macros = "0.27"
convert_case = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14"
dotenvy_macro = "0.15"
thiserror = "2.0"
infer = "0.19"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
anyhow = "1.0"
once_cell = "1.21"
